# fuzzy-search-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
benches/: benchmark.rs  test_data.rs
src/: candidate_match.rs  fuzzy_search_levenshtein.rs  fuzzy_search_options.rs  fuzzy_search_substitutions_only.rs  fuzzy_search_substitutions_only_simd.rs  lib.rs  match_consolidator.rs  match_result.rs  match_result_value.rs  test.rs
