[package]
name = "fuzzysearchrs"
version = "0.1.0"
edition = "2021"
description = "Fuzzy search for finding strings in string with levenshtein distance"
readme = "README.md"
repository = "https://github.com/vforteli/fuzzy-search-rust"
license = "MIT"
keywords = ["fuzzysearch", "fuzzy", "search", "levenshtein"]
exclude = [
    "benches/test_files/*"
]

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false